# 1c-log-viewer

./: Cargo.toml  README.md
src/: app.rs  logdata.rs  main.rs  parser.rs  util.rs
src/parser/: buffers.rs  compiler.rs  fields.rs  logdata.rs  mod.rs  value.rs
src/ui/: filter.rs  index.rs  mod.rs  model.rs  table.rs
src/ui/widgets/: info.rs  lineedit.rs  mod.rs  table.rs
