[package]
name = "journal1c"
version = "0.2.1"
edition = "2021"

[dependencies]
tui = "0.19.0"
crossterm = "0.24.0"
regex = "1.6.0"
lazy_static = "1.4.0"
chrono = "0.4.20"
walkdir = "2.3.2"
indexmap = "1.9.1"
clap = { version = "3.2.16", features = ["derive"] }
thiserror = "1.0.32"
cli-clipboard = "0.2.1"